--- a/unifi-templates/wish/new.html
+++ b/unifi-templates/wish/new.html
@@ -21,7 +21,8 @@
         , "json" );
     </script>
 
-    <form action="/student/wish/create" method="POST" class="tagit_form">{% csrf_token %}
+    <form action="/student/wish/create" method="POST" class="tagit_form">
+        {% csrf_token %}
         <ul id="mytags" class="tagit ui-widget ui-widget-content ui-corner-all">
             <li class="tagit-new"></li>
         </ul>
